force-app/main/default/objects/Activity/fields/Last_Completed__c.field-meta.xml
<CustomField>
    <fullName>Last_Completed__c</fullName>
    <label>Last Completed</label>
    <type>Date</type>
</CustomField>