force-app/main/default/objects/Activity/fields/Sorting__c.field-meta.xml
<CustomField>
    <fullName>Sorting__c</fullName>
    <formula>CASE(TEXT(Priority),
&apos;High&apos;, TEXT(YEAR(ActivityDate)) &amp; &apos;.&apos; &amp; if(Month(ActivityDate) &lt; 10, &apos;0&apos; + TEXT(Month(ActivityDate)), TEXT(Month(ActivityDate))) &amp; &apos;.&apos; &amp; if(Day(ActivityDate) &lt; 10, &apos;0&apos; + TEXT(Day(ActivityDate)), TEXT(Day(ActivityDate))) &amp; &apos;.1&apos;,
&apos;Normal&apos;, TEXT(YEAR(ActivityDate)) &amp; &apos;.&apos; &amp; if(Month(ActivityDate) &lt; 10, &apos;0&apos; + TEXT(Month(ActivityDate)), TEXT(Month(ActivityDate))) &amp; &apos;.&apos; &amp; if(Day(ActivityDate) &lt; 10, &apos;0&apos; + TEXT(Day(ActivityDate)), TEXT(Day(ActivityDate))) &amp; &apos;.2&apos;,
&apos;Low&apos;, TEXT(YEAR(ActivityDate)) &amp; &apos;.&apos; &amp; if(Month(ActivityDate) &lt; 10, &apos;0&apos; + TEXT(Month(ActivityDate)), TEXT(Month(ActivityDate))) &amp; &apos;.&apos; &amp;
if(Day(ActivityDate) &lt; 10, &apos;0&apos; + TEXT(Day(ActivityDate)), TEXT(Day(ActivityDate))) &amp; &apos;.3&apos;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sorting</label>
    <type>Text</type>
</CustomField>