force-app/main/default/objects/Activity/fields/Sub_Type_John__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type_John__c</fullName>
    <label>Sub Type John</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>