force-app/main/default/objects/Activity/fields/Sub_Type_Taylor__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type_Taylor__c</fullName>
    <label>Sub Type Taylor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Taylor 1</fullName>
            </value>
            <value>
                <fullName>Taylor 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>